..F....... [ZBX-8458] prevented wrapping of SELECT button
git-svn-id: svn://svn.zabbix.com/branches/dev@47382 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-8458/frontends/php/styles/default.css
+++ b/ZBX-8458/frontends/php/styles/default.css
@@ -214,7 +214,7 @@ ul.formlist li { padding: 2px; height: 100%; vertical-align: middle; display: ta
 ul.formlist li .dt { padding: 4px 0 2px; display: table-cell; white-space: nowrap; vertical-align: top; width: 20%; }
 ul.formlist li .dd { padding: 2px 0; vertical-align: top; }
 ul.formlist .formrow .dd .checkbox { vertical-align: middle; }
-ul.formlist .formrow .dd { margin-left: 10px; }
+ul.formlist .formrow .dd { margin-left: 10px; white-space: nowrap; }
 ul.formlist .formrow .text-field { margin-top: 2px; display: inline-block; height: 14px; }
 ul.formlist .hidden { display: none; }
 ul.formlist .text, ul.formlist textarea, ul.formlist .password { padding: 3px; }
